--- a/data-collector/package.json
+++ b/data-collector/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^4.0.0",
+    "firebase-admin": "^5.0.0",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4"
   },
