--- a/data-collector/tsconfig.json
+++ b/data-collector/tsconfig.json
@@ -6,7 +6,8 @@
     "noImplicitAny": false,
     "sourceMap": true,
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "node"
      ]
   }
 }
