--- a/data-collector/package.json
+++ b/data-collector/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "deploy": "gcloud app deploy --quiet --stop-previous-version",
+    "deploy": "tsc && gcloud app deploy --quiet --stop-previous-version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
