--- a/burst/miner/mining.conf
+++ b/burst/miner/mining.conf
@@ -35,15 +35,18 @@
             "salt" : ""
         },
         "plots" : [
-            "/home/rig4/mining/drives/Drive\\x201",
-            "/home/rig4/mining/drives/Drive\\x203",
-            "/home/rig4/mining/drives/Drive\\x204",
-            "/home/rig4/mining/drives/Drive\\x205",
-            "/home/rig4/mining/drives/Drive\\x206",
-            "/home/rig4/mining/drives/Drive\\x207",
-            "/home/rig4/mining/drives/Drive\\x208",
-            "/home/rig4/mining/drives/New\\x20Volume",
-            "/home/rig4/mining/drives/Drive\\x2010"
+            "~/drives/disk-2-1",
+            "~/drives/disk-2-2",
+            "~/drives/disk-2-3",
+            "~/drives/disk-2-4",
+            "~/drives/disk-2-5",
+            "~/drives/disk-2-6",
+            "~/drives/disk-2-7",
+            "~/drives/disk-2-8",
+            "~/drives/disk-2-9",
+            "~/drives/disk-2-10",
+            "~/drives/disk-2-11",
+            "~/drives/disk-2-12"
         ],
         "submissionMaxRetry" : 3,
         "targetDeadline" : "0y 0m 20d 15:00:00",
